--- a/b-rate/src/index.css
+++ b/b-rate/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://font.goggleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway:300;400,700,900');
+
 * {
   box-sizing: border-box;
 }
@@ -12,22 +15,26 @@ body {
 }
 
 .nav {
-  padding:0 20px;
-  background-color: #1295cd;
-  color: white;
+  background-image: linear-gradient(lightgray, white);
+  color: black;
   display: flex;
   align-items: stretch;
   justify-content: space-between;
   gap: 2rem;
   font-size: 1.05rem;
   padding: 0 1rem;
-  font-family:Verdana, sans-serif;
+  font-family: Verdana, sans-serif;
+
 }
 
 .site-title {
   font-size: 2rem;
-  font-weight: bold;
+
   margin-left: 100px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-family: 'Raleway', sans-serif;
+
 }
 
 .nav ul {
@@ -49,107 +56,67 @@ body {
 }
 
 
-.nav li:hover {
-  background-color: rgb(182, 148, 0);
+
+
+.loginbutton:hover {
+
+
+  transform: rotate(0deg) skew(0deg) translate(0, -3px);
+
 }
 
-.slide-container {
-  width: 100%;
-  border: none;
-}
+.register:hover {
 
-@import url('https://font.goggleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
-
-.wrapper{
-    width: 600px;
-    background: #1295cd;
-    color: white;
-    border-radius: 40px;
-    padding: 100px 40px;
-    margin: auto;
-    justify-content: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
-.wrapper h1{
-    font-size:36px;
-}
-
-.wrapper .input-box {
-    position:relative;
-    width:100%;
-    height: 50px;
-    margin: 30px 0;
-}
-
-
- .input-box input{
-    width:100%;
-    height:100%;
-    background: transparent;
-    border: none;
-    outline: none;
-    border: 2px solid rgba(255, 255, 255, .2);
-    border-radius: 40px;
-    font-size: 16px;
-    color: white;
-    padding:20px 45px 20px 20px;
+  transform: rotate(0deg) skew(0deg) translate(0, -3px);
 
 
 }
 
-.input-box input::placeholder{
+.reviewbutton:hover {
 
-    color: white;
-
-}
-
-.input-box .icon{
-    position:absolute;
-    right:20px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size:16px;
+  transform: rotate(0deg) skew(0deg) translate(0, -3px);
 }
 
 
+.loginbutton {
 
-.wrapper button{
-    width: 100%;
-    height: 45px;
-    background: white;
-    border: none;
-    outline: none;
-    border-radius: 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
-    cursor: pointer;
-    font-size: 16px;
-    color: #333;
-    font-weight: 700;
+  background-color: transparent;
+  margin-top: 20px;
+  padding: 10px 10px;
+  font-size: 16px;
+  border-radius: 15px;
+  font-family: 'Raleway', sans-serif;
+  border-width: 1px;
+  border-color: black;
+  margin-bottom: 20px;
 
 }
 
-.wrapper button:hover{
-    background-color: rgb(249, 222, 103);
+.register {
+
+  background-color: #1295cd;
+  margin-top: 20px;
+  margin-right: -80px;
+  padding: 10px 10px;
+  font-size: 16px;
+  border-radius: 15px;
+  font-family: 'Raleway', sans-serif;
+  border-width: 1px;
+  border-color: black;
+  margin-bottom: 20px;
 }
 
+.reviewbutton {
 
-.register-link p a{
-    color: white;
-    text-decoration: none;
-    font-weight: 600;
+  background-color: transparent;
+  margin-top: 20px;
+  padding: 10px 10px;
+  font-size: 14px;
+  border-radius: 15px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+  border-color: transparent;
+  margin-bottom: 20px;
 
-}
 
-.register-link p a:hover{
-    text-decoration: underline;
-}
-
-.wrapper{
-    font-family: 'Poppins', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing:grayscale;
-    justify-content: center;
-    align-items:center;
 }
