--- a/b-rate/src/index.css
+++ b/b-rate/src/index.css
@@ -1,6 +1,8 @@
 @import url('https://font.goggleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Raleway:300;400,700,900');
 
+
+
 * {
   box-sizing: border-box;
 }
@@ -51,12 +53,15 @@ margin-bottom: 20px;
 
 .search input{
     width: 400px;
-    border: 2px solid black;
+    border: 1px solid rgb(0, 0, 0);
     border-radius: 10px;
     font-size: 16px;
     font-family: 'Raleway', sans-serif;
     padding: 10px 45px 10px 20px;
 }
+
+
+
 
 
 .nav ul {
