--- a/b-rate/src/index.css
+++ b/b-rate/src/index.css
@@ -43,23 +43,36 @@ display: flex;
 align-items: center;
 justify-content:center;
 margin-top: 20px;
-border-radius: 80px;
 margin-left: -200px;
 margin-right: -80px;
 margin-bottom: 20px;
+
 
 }
 
 .search input{
     width: 400px;
-    border: 1px solid rgb(0, 0, 0);
-    border-radius: 10px;
+    border: 1px gray;
+    border-radius: 2px;
     font-size: 16px;
     font-family: 'Raleway', sans-serif;
     padding: 10px 45px 10px 20px;
 }
 
+.searchclick{
 
+ 
+  background-color: #1295cd;
+  padding: 10px 15px 10px 15px;
+  border-color: transparent;
+
+}
+
+.searchicon{
+  
+  color: white;
+cursor: pointer;
+}
 
 
 
