--- a/b-rate/src/pages/login.css
+++ b/b-rate/src/pages/login.css
@@ -8,7 +8,7 @@
     margin-top: 40px;
     margin-left: 80px;
     margin-bottom: 40px;
-    border: 2px solid rgba(255, 255, 255, .2);
+    border: 2px solid rgba(182, 25, 25, 0.2);
 }
 
 
@@ -51,11 +51,7 @@
     border-radius: 10px;
     font-size: 16px;
     font-family: 'Raleway', sans-serif;
-
     padding: 20px 45px 20px 20px;
-
-
-
 }
 
 
