--- a/b-rate/src/home.css
+++ b/b-rate/src/home.css
@@ -7,7 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 700px;
+    height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
