--- a/b-rate/src/pages/Account_Info_1.css
+++ b/b-rate/src/pages/Account_Info_1.css
@@ -9,6 +9,12 @@
     color: white;
     border: none;
     cursor: pointer;
+    border-radius: 20px;
+  }
+
+  .next-button a{
+    text-decoration: none;
+    color:white;
   }
 
 .next-button:hover {
@@ -26,7 +32,7 @@
 }
 
 .name-wrapper {
-    margin-top: 220px;
+    margin-top: 125px;
 
     font-family: 'Raleway', sans-serif;
     font-style: bold;
@@ -35,5 +41,7 @@
     justify-content: center;
     align-items: center;
 }
+
+
 
   
