--- a/b-rate/src/pages/Account_Info_2.css
+++ b/b-rate/src/pages/Account_Info_2.css
@@ -1,4 +1,4 @@
-.button {
+.dining-option {
     margin-right: 20px;
     margin-top: 20px;
     padding: 20px 20px 20px 20px;
@@ -10,12 +10,24 @@
     border-radius: 20px;
 }
 
-.button:hover {
+.dining-option:hover {
     transform: rotate(0deg) skew(0deg) translate(0, -3px);
 }
 
 .favorite-wrapper{
     margin-top: 200px;
+    font-family: 'Raleway', sans-serif;
+    font-style: bold;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    justify-content: center;
+    align-items: center;
 }
+
+.dining-option a {
+    text-decoration: none;
+    color:white;
+}
+
 
 
