home page changed along with the nav bar

--- a/b-rate/src/pages/login.css
+++ b/b-rate/src/pages/login.css
@@ -9,7 +9,9 @@
     margin-left: 80px;
     margin-bottom: 40px;
     border: 2px solid rgba(182, 25, 25, 0.2);
+    font: normal normal 300 22px/33px Poligon;
 }
+
 
 
 .image {
