added icons to the register page

--- a/b-rate/src/footer.css
+++ b/b-rate/src/footer.css
@@ -4,9 +4,11 @@
     padding-top: 3rem;
     position: relative;
     bottom: 0;
+    left:0;
     width: 100%;
     font-size: smaller;
     height: 100%;
+  
 }
 
 .test {
