Complete profile page with edit functionality, Update size of font on survey page, Remove link to survey page from register button

--- a/b-rate/src/pages/Profile.css
+++ b/b-rate/src/pages/Profile.css
@@ -53,3 +53,12 @@
     margin: auto;
   }
   
+  .edit-save {
+    background-color: #1295cd;
+    padding-top: 4px;
+    padding-bottom: 3px;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
