--- a/b-rate/src/home.css
+++ b/b-rate/src/home.css
@@ -114,13 +114,13 @@
 
 
   .right h1{
-    font:normal bold 50px Lato;
+    font:normal bold 50px 'Raleway', sans-serif;
     margin-bottom: 1px;
   }
 
   .right h2{
     
-    font: normal bold 20px Lato;
+    font: normal bold 20px 'Raleway', sans-serif;
     color: gray;
 
   }
@@ -129,7 +129,7 @@
 
   .right p{
     margin-top: 40px;
-    font: normal 20px Lato;
+    font: normal 20px  'Raleway', sans-serif;
 
   }
 
