Updated forgot.js and created password_reset

--- a/b-rate/src/App.css
+++ b/b-rate/src/App.css
@@ -55,3 +55,8 @@
   width: 100%; /* Example fluid content width */
   margin: 0; /* Center the content horizontally */
 }
+
+.footer {
+  position: absolute;
+  bottom: 0;
+}
