--- a/b-rate/src/pages/Profile.css
+++ b/b-rate/src/pages/Profile.css
@@ -24,6 +24,7 @@
     margin-top: 10px;
     margin-left: 425px;
     margin-right: 425px;
+    margin-bottom: 100px;
     padding-top: 100px;
     padding-bottom: 100px;
   }
