--- a/b-rate/src/footer.css
+++ b/b-rate/src/footer.css
@@ -1,12 +1,12 @@
 .main-footer{
     color:white;
     background-color: #1295cd;
-    padding-top: 3rem;
+    padding-top: 1rem;
     position: relative;
     bottom: 0;
     left:0;
     width: 100%;
-    height:350px;
+    height: 100%;
     font-size: smaller;
    
     font-family: 'Raleway', sans-serif;
