--- a/b-rate/src/footer.css
+++ b/b-rate/src/footer.css
@@ -6,9 +6,8 @@
     bottom: 0;
     left:0;
     width: 100%;
-    height: 100%;
+    height:350px;
     font-size: smaller;
-   
     font-family: 'Raleway', sans-serif;
     
 }
