--- a/b-rate/src/footer.css
+++ b/b-rate/src/footer.css
@@ -6,7 +6,7 @@
     bottom: 0;
     left:0;
     width: 100%;
-    height:350px;
+    height:100%;
     font-size: smaller;
     font-family: 'Raleway', sans-serif;
     
