footer added to every page

--- a/b-rate/src/pages/forgot.css
+++ b/b-rate/src/pages/forgot.css
@@ -1,6 +1,7 @@
 @import url('https://font.goggleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
 .wrapper {
+    display: flex;
     width: 420px;
     background: white;
     padding: 50px 40px;
@@ -13,11 +14,10 @@
 
 .image {
     position: absolute;
-    top: 0;
-    right: 0;
-    width: 50%;
+    justify-content: right;
+    width: auto;
+   
     height: 100vh;
-    object-fit: cover;
 }
 
 
