--- a/b-rate/src/pages/Register.css
+++ b/b-rate/src/pages/Register.css
@@ -1,17 +1,17 @@
 @import url('https://font.goggleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
-.wrapper {
+.wrapperregister {
     width: 420px;
     background: white;
     padding: 50px 40px;
     margin-top: -5px;
     margin-left: 125px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     border: 2px solid rgba(255, 255, 255, .2);
 }
 
 
-.image {
+.imageregister {
     position: absolute;
     top: 0;
     right: 0;
@@ -23,19 +23,19 @@
 
 
 
-.wrapper h1 {
+.wrapperregister h1 {
     font-size: 36px;
     color: black;
 
 }
 
-.wrapper h2 {
+.wrapperregister h2 {
     font-size: 14px;
     color: black;
 
 }
 
-.wrapper .input-box {
+.wrapperregister .input-box {
     position: relative;
     height: 50px;
     margin: 30px 0;
@@ -74,7 +74,7 @@
     color: black;
 }
 
-.wrapper .remember-forgot {
+.wrapperregister .remember-forgot {
     display: flex;
     justify-content: space-between;
     color: black;
@@ -96,7 +96,7 @@
     text-decoration: underline;
 }
 
-.wrapper button {
+.wrapperregister button {
     width: 100%;
     height: 45px;
     background: black;
@@ -114,18 +114,18 @@
 
 
 
-.wrapper button:hover {
+.wrapperregister button:hover {
     transform: rotate(0deg) skew(0deg) translate(0, -3px);
 }
 
-.wrapper button a {
+.wrapperregister button a {
     text-decoration: none;
     color:white;
 }
 
 
 
-.wrapper .register-link {
+.wrapperregister .register-link {
     font-size: 14.5px;
     text-align: center;
     margin: 20px 0 15px;
@@ -143,7 +143,7 @@
     text-decoration: underline;
 }
 
-.wrapper {
+.wrapperregister {
     font-family: 'Raleway', sans-serif;
     font-style: bold;
     -webkit-font-smoothing: antialiased;
