--- a/b-rate/src/pages/footer.css
+++ b/b-rate/src/pages/footer.css
@@ -1,12 +1,13 @@
 .main-footer{
     color:white;
     background-color: #1295cd;
-    padding-top: 1rem;
-    position: relative;
+    padding-top: 3rem;
+    display: flex;
+    align-items: flex-end;
     bottom: 0;
     left:0;
     width: 100%;
-    height:100%;
+    height:300px;
     font-size: smaller;
     font-family: 'Raleway', sans-serif;
     
