--- a/b-rate/src/pages/footer.css
+++ b/b-rate/src/pages/footer.css
@@ -1,16 +1,15 @@
-.main-footer{
-    color:white;
+.main-footer {
+    color: white;
     background-color: #1295cd;
     padding-top: 3rem;
-    display: flex;
-    align-items: flex-end;
+    position: relative;
     bottom: 0;
-    left:0;
+    left: 0;
     width: 100%;
-    height:300px;
+    height: 225px;
     font-size: smaller;
     font-family: 'Raleway', sans-serif;
-    
+
 }
 
 .test {
