--- a/b-rate/src/pages/Account_Info_2.css
+++ b/b-rate/src/pages/Account_Info_2.css
@@ -14,7 +14,7 @@
     transform: rotate(0deg) skew(0deg) translate(0, -3px);
 }
 
-.favorite-wrapper{
+.favorite-wrapper {
     margin-top: 200px;
     font-family: 'Raleway', sans-serif;
     font-style: bold;
@@ -22,12 +22,10 @@
     -moz-osx-font-smoothing: grayscale;
     justify-content: center;
     align-items: center;
+    margin-bottom: 75px;
 }
 
 .dining-option a {
     text-decoration: none;
-    color:white;
+    color: white;
 }
-
-
-
