--- a/b-rate/src/pages/footer.css
+++ b/b-rate/src/pages/footer.css
@@ -2,7 +2,8 @@
     color: white;
     background-color: #1295cd;
     padding-top: 3rem;
-    position: relative;
+    display: flex;
+    align-items: flex-end;
     bottom: 0;
     left: 0;
     width: 100%;
