--- a/b-rate/src/pages/forgot.css
+++ b/b-rate/src/pages/forgot.css
@@ -1,50 +1,47 @@
 @import url('https://font.goggleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
-.wrapper {
+.wrapper-forgot {
     width: 420px;
     background: white;
     padding: 50px 40px;
-    margin-top: -5px;
-    margin-left: 125px;
+    margin-top: 30px;
+    margin-left: 140px;
     margin-bottom: 100px;
-
     border: 2px solid rgba(255, 255, 255, .2);
+
+
+    font-family: 'Raleway', sans-serif;
+    font-style: bold;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 
-.image {
+.image-forgot {
     position: absolute;
     top: 0;
     right: 0;
     width: 50%;
-    height: 75.8vh;
+    height: 100%;
     object-fit: cover;
 
 }
 
-
-
-
-.wrapper h1 {
+.wrapper-forgot h1 {
     font-size: 36px;
     color: black;
 
 }
 
-.wrapper h2 {
-    font-size: 14px;
-    color: black;
 
-}
-
-.wrapper .input-box {
+.wrapper-forgot .input-box-forgot {
     position: relative;
     height: 50px;
     margin: 30px 0;
 }
 
 
-.input-box input {
+.input-box-forgot input {
 
     width: 100%;
     height: 100%;
@@ -55,19 +52,15 @@
 
     padding: 20px 45px 20px 20px;
 
-
-
 }
 
-
-
-.input-box input::placeholder {
+.input-box-forgot input::placeholder {
 
     color: black;
 
 }
 
-.input-box .icon {
+.input-box-forgot .icon {
     position: absolute;
     right: 20px;
     top: 50%;
@@ -76,29 +69,8 @@
     color: black;
 }
 
-.wrapper .remember-forgot {
-    display: flex;
-    justify-content: space-between;
-    color: black;
-    font-size: 14.5px;
-    margin: -15px 0 15px;
-}
 
-.remember-forgot label input {
-    accent-color: black;
-    margin-right: 4px;
-}
-
-.remember-forgot a {
-    color: black;
-    text-decoration: none;
-}
-
-.remember-forgot a:hover {
-    text-decoration: underline;
-}
-
-.wrapper button {
+.wrapper-forgot button {
     width: 100%;
     height: 45px;
     background: black;
@@ -113,34 +85,8 @@
 
 }
 
-.wrapper button:hover {
+.wrapper-forgot button:hover {
     transform: rotate(0deg) skew(0deg) translate(0, -3px);
 }
 
 
-.wrapper .register-link {
-    font-size: 14.5px;
-    text-align: center;
-    margin: 20px 0 15px;
-    color: black
-}
-
-.register-link p a {
-    color: black;
-    text-decoration: none;
-    font-weight: 600;
-
-}
-
-.register-link p a:hover {
-    text-decoration: underline;
-}
-
-.wrapper {
-    font-family: 'Raleway', sans-serif;
-    font-style: bold;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-
-
-}
