--- a/b-rate/src/pages/password_reset.css
+++ b/b-rate/src/pages/password_reset.css
@@ -1,49 +1,49 @@
 @import url('https://font.goggleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
-.wrapper-register {
+.wrapper-reset {
     width: 420px;
     background: white;
-    display: relative;
     padding: 50px 40px;
-    margin-top: -50px;
+    margin-top: -5px;
     margin-left: 150px;
-    margin-bottom: 30px;
+    margin-bottom: 100px;
     border: 2px solid rgba(255, 255, 255, .2);
+
 
     font-family: 'Raleway', sans-serif;
     font-style: bold;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    justify-content: center;
-    align-items: center;
 }
 
 
-.image-register {
+.image-reset {
     position: absolute;
         top: 0;
         right: 0;
         width: 50%;
         height: 100%;
         object-fit: cover;
-   
+
 }
 
-.wrapper-register h1 {
+
+.wrapper-reset h1 {
     font-size: 36px;
     color: black;
 
 }
 
 
-.wrapper-register .input-box-register {
+
+.wrapper-reset .input-box-reset {
     position: relative;
     height: 50px;
     margin: 30px 0;
 }
 
 
-.input-box-register input {
+.input-box-reset input {
 
     width: 100%;
     height: 100%;
@@ -56,11 +56,13 @@
 }
 
 
-.input-box-register input::placeholder {
+.input-box-reset input::placeholder {
+
     color: black;
+
 }
 
-.input-box-register .icon {
+.input-box-reset .icon {
     position: absolute;
     right: 20px;
     top: 50%;
@@ -69,8 +71,7 @@
     color: black;
 }
 
-
-.wrapper-register button {
+.wrapper-reset button {
     width: 100%;
     height: 45px;
     background: black;
@@ -83,14 +84,10 @@
     color: white;
     font-weight: 700;
 
-
 }
 
-.wrapper-register button:hover {
+.wrapper-reset button:hover {
     transform: rotate(0deg) skew(0deg) translate(0, -3px);
 }
-
-
-
 
 
